# BloomScreen

./: README.md  package-lock.json  package.json  replaceColors.cjs  vite.config.ts
openscreen-clone/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
openscreen-clone/public/wasm/: web-demuxer.wasm
openscreen-clone/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
openscreen-clone/src-tauri/: Cargo.toml  tauri.conf.json
openscreen-clone/src-tauri/icons/: icon.icns
openscreen-clone/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
openscreen-clone/src/components/home/: HomeScreen.tsx  TitleBar.tsx
openscreen-clone/src/components/launch/: SourceSelector.module.css  SourceSelector.tsx
openscreen-clone/src/components/ui/: item-content.tsx  slider.tsx  switch.tsx
openscreen-clone/src/components/video-editor/: AnnotationOverlay.tsx  AnnotationSettingsPanel.tsx  BlurSettingsPanel.tsx  CommandMenu.tsx  CropControl.tsx  ExportDialog.tsx  FormatSelector.tsx  KeyboardShortcutsHelp.tsx  PlaybackControls.tsx  SettingsPanel.tsx  ShortcutsConfigDialog.tsx  VideoEditor.tsx  VideoPlayback.tsx  projectPersistence.ts  types.ts
openscreen-clone/src/lib/: electronAPI.ts  recordingSession.ts  tauriAPI.ts
openscreen-clone/tests/fixtures/: sample.webm
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/video-editor/: CursorOverlay.tsx  VideoEditor.tsx  VideoPlayback.tsx
src/components/video-editor/timeline/: KeyframeMarkers.tsx  TimelineEditor.tsx
src/hooks/: useEditorHistory.ts
(+6 files in other folders)
